[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name="cuttlypy"
version="1.0.0"
description = "Wrapper Link analytics cuttly"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
dependencies = [
  "httpx",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cuttlypy.py"]
